--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
-.cabecalho
-   { background-color: blueviolet;
-    color::after
+
+.cabecalho {
+    background-color: #424E61;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
 }
 
-.corpo{background-color}
+.cabecalho-imagem{
+    width: 20%;
+}
+
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
+    font-size: 24px;
+}
+
